--- a/email.html
+++ b/email.html
@@ -30,19 +30,20 @@
             <h1>Informace o objednávce</h1>
 
             <ul>
-                <li>Kvalita:</li>
-                <li>Prostředí užívání:</li>
-                <li>Kvalita povrchu:</li>
-                <li>Materiál:</li>
-                <li>Barva:</li>
+                <li>Kvalita: {{ modelQuality}}</li>
+                <li>Prostředí užívání: {{enviroment}}</li>
+                <li>Kvalita povrchu: {{ surfaceQuality }}</li>
+                <li>Materiál: {{material}}</li>
+                <li>Barva: {{modelColor}}</li>
                 <li>Váha modelu: {{modelWeight}}</li>
                 <li>
-                    Rozměry (x,y,z): X: {{modelDimensionX}}, Y:
-                    {{modelDimensionY}}, Z: {{modelDimensionZ}}
+                    Rozměry (x,y,z): X: {{modelDimensionX}} cm, Y:
+                    {{modelDimensionY}} cm, Z: {{modelDimensionZ}} cm
                 </li>
                 <li>Počet výtisků: {{count}} ks</li>
-                <li>Vypočítaná cena: {{orderPrice}} Kč</li>
-
+                <li>Vypočítaná cena: {{printPrice}} Kč</li>
+                <li>Dopravce: {{carrier}} ({{carrierPrice}} Kč)</li>
+                <li>Cena za objednávku: {{orderPrice}} Kč</li>
                 <li>Dodatečná poznámka: {{note}}</li>
             </ul>
 
